name:                PLHash
version:             0.2.0.0
synopsis:            Hash primitive's, composite structures and hashes.
description:         Hash primitive's, composite structures and hashes into
                     human readable, self-describing hashes.
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            PL
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PLHash

  -- other-modules:       
  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >= 4.12

                     , PLPrinter  >= 0.3
                     , containers
                     , text
                     , bytestring
                     , hashing
                     , base58-bytestring
                     , utf8-string

  -- hs-source-dirs:      
  default-language:    Haskell2010

  ghc-options: -fwarn-incomplete-patterns -Werror=incomplete-patterns

